// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots /Routes Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-r0dolg MuiBox-root-1"
  id="/welcome"
>
  <h4
    className="MuiTypography-root-8hei21 MuiTypography-h4-594um6 MuiTypography-colorPrimary-sb76nh Hook-inline-42z04s"
  >
    Welcome
  </h4>
  <h4
    className="MuiTypography-root-8hei21 MuiTypography-h4-594um6 Hook-inline-42z04s"
  >
     to your IOV manager
  </h4>
  <div
    className="MuiBox-root-r0dolg MuiBox-root-2"
  >
    <p
      className="MuiTypography-root-8hei21 MuiTypography-body1-11e8b6e Hook-inline-42z04s"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-r0dolg MuiBox-root-3"
    />
    <button
      className="MuiButtonBase-root-199s9j0 MuiButton-root-vy7hyk MuiButton-contained-1wct324 MuiButton-containedPrimary-zxltu3 MuiButton-fullWidth-140jv3d"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-blnbog"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-101rr6o"
      />
    </button>
    <div
      className="MuiBox-root-r0dolg MuiBox-root-4"
    />
    <button
      className="MuiButtonBase-root-199s9j0 MuiButton-root-vy7hyk MuiButton-contained-1wct324 MuiButton-containedPrimary-zxltu3 MuiButton-fullWidth-140jv3d"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-blnbog"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-101rr6o"
      />
    </button>
    <div
      className="MuiBox-root-r0dolg MuiBox-root-5"
    />
    <button
      className="MuiButtonBase-root-199s9j0 MuiButton-root-vy7hyk MuiButton-contained-1wct324 MuiButton-containedPrimary-zxltu3 MuiButton-fullWidth-140jv3d"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-blnbog"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-101rr6o"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-r0dolg MuiBox-root-6"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Button Button in desktop screen 1`] = `
<div
  className="MuiGrid-container-fqum5v MuiGrid-spacing-xs-4-6rrnx7"
>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
  </div>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButtonBase-disabled-1iw40v3 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-disabled-1iw40v3"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedSecondary-1xbujvy"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
  </div>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-fullWidth-8ssv3m"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiGrid-container-fqum5v MuiGrid-spacing-xs-4-6rrnx7"
  >
    <div
      className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
    >
      <button
        className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1hmtjr4"
        >
          Hower
        </span>
        <span
          className="MuiTouchRipple-root-okw3jz"
        />
      </button>
    </div>
    <div
      className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
    >
      <button
        className="MuiButtonBase-root-mv6yu9 MuiButtonBase-disabled-1iw40v3 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-disabled-1iw40v3"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-1hmtjr4"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
    >
      <button
        className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedSecondary-1xbujvy"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1hmtjr4"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-okw3jz"
        />
      </button>
    </div>
    <div
      className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
    >
      <button
        className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-fullWidth-8ssv3m"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1hmtjr4"
        >
          Full Width
        </span>
        <span
          className="MuiTouchRipple-root-okw3jz"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Button with Box flex layout 1`] = `
<div
  className="MuiBox-root-1h7jgvj MuiBox-root-1"
>
  <div
    className="MuiBox-root-1h7jgvj MuiBox-root-2"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-1h7jgvj MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButtonBase-disabled-1iw40v3 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-disabled-1iw40v3"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1h7jgvj MuiBox-root-4"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedSecondary-1xbujvy"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-1h7jgvj MuiBox-root-5"
  >
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-fullWidth-8ssv3m"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /TextFieldForm Examples 1`] = `
<div
  className="MuiGrid-container-fqum5v MuiGrid-spacing-xs-5-hxelu5"
>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-6-1yiawnl"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1ubw03r MuiFormControl-marginNormal-68oxmx MuiTextField-root-gm5xf2"
      >
        <label
          className="MuiFormLabel-root-1o3wv4y MuiFormLabel-error-1yvr0fz MuiInputLabel-error-1a6gyuf MuiInputLabel-root-1vi8evb MuiInputLabel-formControl-1begqsl MuiInputLabel-animated-1p3h0mf MuiInputLabel-shrink-1nm0y5a"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-wd29vv MuiOutlinedInput-root-h040r MuiInputBase-error-1yvr0fz MuiOutlinedInput-error-1vo2i4p MuiInputBase-formControl-1aofjnb"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-ls7hs0 MuiOutlinedInput-notchedOutline-190bug8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1xumzs6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-lpkfxz MuiOutlinedInput-input-1jt567n"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-klgpd8 MuiFormHelperText-contained-1aauqry MuiFormHelperText-error-1yvr0fz"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-6-1yiawnl"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1ubw03r MuiFormControl-marginNormal-68oxmx MuiTextField-root-gm5xf2"
      >
        <label
          className="MuiFormLabel-root-1o3wv4y MuiInputLabel-root-1vi8evb MuiInputLabel-formControl-1begqsl MuiInputLabel-animated-1p3h0mf MuiInputLabel-shrink-1nm0y5a"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-wd29vv MuiOutlinedInput-root-h040r MuiInputBase-formControl-1aofjnb"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-ls7hs0 MuiOutlinedInput-notchedOutline-190bug8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1xumzs6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-lpkfxz MuiOutlinedInput-input-1jt567n"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-6-1yiawnl"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1ubw03r MuiFormControl-marginNormal-68oxmx MuiTextField-root-gm5xf2"
      >
        <label
          className="MuiFormLabel-root-1o3wv4y MuiFormLabel-disabled-1iw40v3 MuiInputLabel-disabled-1iw40v3 MuiInputLabel-root-1vi8evb MuiInputLabel-formControl-1begqsl MuiInputLabel-animated-1p3h0mf MuiInputLabel-shrink-1nm0y5a"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-wd29vv MuiOutlinedInput-root-h040r MuiInputBase-disabled-1iw40v3 MuiOutlinedInput-disabled-1iw40v3 MuiInputBase-formControl-1aofjnb"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-ls7hs0 MuiOutlinedInput-notchedOutline-190bug8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1xumzs6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-lpkfxz MuiOutlinedInput-input-1jt567n MuiInputBase-disabled-1iw40v3 MuiOutlinedInput-disabled-1iw40v3"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-6-1yiawnl"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1ubw03r MuiFormControl-marginNormal-68oxmx MuiTextField-root-gm5xf2"
      >
        <label
          className="MuiFormLabel-root-1o3wv4y MuiInputLabel-root-1vi8evb MuiInputLabel-formControl-1begqsl MuiInputLabel-animated-1p3h0mf MuiInputLabel-shrink-1nm0y5a"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-wd29vv MuiOutlinedInput-root-h040r MuiInputBase-formControl-1aofjnb"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-ls7hs0 MuiOutlinedInput-notchedOutline-190bug8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1xumzs6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-lpkfxz MuiOutlinedInput-input-1jt567n"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components /forms Add react-final-form-hooks form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-1ubw03r MuiFormControl-marginNormal-68oxmx MuiTextField-root-gm5xf2"
  >
    <label
      className="MuiFormLabel-root-1o3wv4y MuiInputLabel-root-1vi8evb MuiInputLabel-formControl-1begqsl MuiInputLabel-animated-1p3h0mf MuiInputLabel-shrink-1nm0y5a"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-wd29vv MuiOutlinedInput-root-h040r MuiInputBase-formControl-1aofjnb"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-ls7hs0 MuiOutlinedInput-notchedOutline-190bug8"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1xumzs6"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-lpkfxz MuiOutlinedInput-input-1jt567n"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-mv6yu9 MuiButtonBase-disabled-1iw40v3 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-disabled-1iw40v3"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-1hmtjr4"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Image Images 1`] = `
<div
  className="MuiGrid-container-fqum5v MuiGrid-spacing-xs-5-hxelu5"
>
  <div
    className="MuiGrid-item-17wiopu MuiGrid-grid-xs-12-kesmlz"
  >
    <img
      alt="Iov Logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Signup page 1`] = `
<div>
  This is the signup route
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1h7jgvj MuiBox-root-6"
>
  <h4
    className="MuiTypography-root-1y5r8yv MuiTypography-h4-1vy8eht MuiTypography-colorPrimary-1qx4bj7 Hook-inline-42z04s"
  >
    Welcome
  </h4>
  <h4
    className="MuiTypography-root-1y5r8yv MuiTypography-h4-1vy8eht Hook-inline-42z04s"
  >
     to your IOV manager
  </h4>
  <div
    className="MuiBox-root-1h7jgvj MuiBox-root-7"
  >
    <p
      className="MuiTypography-root-1y5r8yv MuiTypography-body1-i7dd4c Hook-inline-42z04s"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1h7jgvj MuiBox-root-8"
    />
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-fullWidth-8ssv3m"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
    <div
      className="MuiBox-root-1h7jgvj MuiBox-root-9"
    />
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-fullWidth-8ssv3m"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
    <div
      className="MuiBox-root-1h7jgvj MuiBox-root-10"
    />
    <button
      className="MuiButtonBase-root-mv6yu9 MuiButton-root-fce3qk MuiButton-contained-m9eopi MuiButton-containedPrimary-7dx5kh MuiButton-fullWidth-8ssv3m"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1hmtjr4"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-okw3jz"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-1h7jgvj MuiBox-root-11"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Typography Styles 1`] = `
Array [
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-1y5r8yv MuiTypography-h4-1vy8eht"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-1y5r8yv MuiTypography-h5-azbbko"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-h6-1gysvl8"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-1y5r8yv MuiTypography-body1-i7dd4c"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-1y5r8yv MuiTypography-body2-u7j861"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle2-1fomr4k"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle1-cr3wip MuiTypography-colorPrimary-1qx4bj7"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle2-1fomr4k MuiTypography-colorPrimary-1qx4bj7 Hook-inline-42z04s"
  >
    First part of the text.
  </h6>,
  <h6
    className="MuiTypography-root-1y5r8yv MuiTypography-subtitle2-1fomr4k Hook-inline-42z04s"
  >
    Second part of the text.
  </h6>,
]
`;
